--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: workshop-dependency
 channels:
   - conda-forge
 dependencies:
-  - python>3.10
+  - python=3.12
   - pandas
   - matplotlib
   - seaborn
